# package-content-elementizer

./: .gitignore  Makefile  README.md  bitbucket-pipelines.yml  git-packages.json  pyproject.toml  sync_git_deps.py  version.sh
git-hooks/: pre-push
talkingdb_ce/: main.py
talkingdb_ce/api/: reader.py
talkingdb_ce/client/: __init__.py  client.py
talkingdb_ce/core/: queues.py
talkingdb_ce/model/api/: reader.py
talkingdb_ce/services/: workers.py
talkingdb_ce/services/reader/: reader.py
talkingdb_ce/services/reader/docx/: docx_reader.py
talkingdb_ce/services/reader/pdf/: _convert_main.py  pdf_reader.py
