[project]
name = "package-content-elementizer"
version = "3.0.0"
description = "A Python package for reading documents, extracting structured elements programmatically"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [
    { include = "talkingdb_ce" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

fastapi = ">=0.125.0,<0.126.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }
requests = ">=2.32.5,<3.0.0"
pydantic = ">=2.12.5,<3.0.0"
python-docx = ">=1.2.0,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
debugpy = ">=1.8.19,<2.0.0"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "3e878fad4c8055e535db7999bf2357e562e48838" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "adc6f09fd3c7ce8642738016f1553adb25e9409d" }
talkingdb-helpers = { git = "git+https://github.com/TalkingDB/base-tdb-helpers.git", rev = "9fd005d3eeafd577e2c8e8dcd866a21230139ae0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
