[project]
name = "package-content-elementizer"
version = "3.0.0"
description = "A Python package for reading documents, extracting structured elements programmatically"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [
    { include = "talkingdb_ce" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

fastapi = ">=0.125.0,<0.126.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }
requests = ">=2.32.5,<3.0.0"
pydantic = ">=2.12.5,<3.0.0"
python-docx = ">=1.2.0,<2.0.0"
pdf2docx = ">=0.5.8,<0.6.0"
python-multipart = ">=0.0.20,<0.0.21"
debugpy = ">=1.8.19,<2.0.0"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "01541326104385660656fa5c3bca1b9b241ecb75" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "2cec542cf24b70a46d174f633dd4b042f20aa4cf" }
talkingdb-helpers = { git = "git+https://github.com/TalkingDB/base-tdb-helpers.git", rev = "2940a73028d0346c68311a5ffcf0a30c316fc253" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
